added some bootstrap

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+        <link rel="stylesheet" href="css/bootstrap-grid.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
@@ -11,5 +11,7 @@
     <body>
         <div id="root"></div>
         <script src="index.pack.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
+	    <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
