--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root">
+            
+        </div>
         <script src="index.pack.js"></script>
         <script src="js/jquery-3.3.1.min.js"></script>
 	    <script src="js/bootstrap.bundle.min.js"></script>
