moved the css files into a css folder added th icon and fonts folders updated the paths where the components were getting their css from

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,14 +6,17 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/ionicons.min.css">
+        <link rel="stylesheet" href="css/plyr.css">
     </head>
     <body>
         <div id="root">
-            
+
         </div>
         <script src="index.pack.js"></script>
         <script src="js/jquery-3.3.1.min.js"></script>
 	    <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/plyr.min.js"></script>
     </body>
 </html>
