--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,12 +9,14 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/ionicons.min.css">
         <link rel="stylesheet" href="css/plyr.css">
+        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     </head>
     <body id="root" class="body">
 
         <script src="index.pack.js"></script>
         <script src="js/jquery-3.3.1.min.js"></script>
 	    <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/jquery.mCustomScrollbar.min.js"></script>
         <script src="js/plyr.min.js"></script>
     </body>
 </html>
